<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scroll"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/space"
            android:layout_marginRight="@dimen/space"
            android:scrollbars="none"
            tools:context="com.example.saravanakumar.intentfilter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/imageCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_capture"/>

        <Button
            android:id="@+id/pickContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_contact"/>

        <Button
            android:id="@+id/mailSendTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_sendto"/>

        <Button
            android:id="@+id/getContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_image_content"/>

        <Button
            android:id="@+id/loadMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_map"/>
        <Button
            android:id="@+id/calltoContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_to_number"/>

        <Button
            android:id="@+id/sendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message"/>

        <Button
            android:id="@+id/openBrowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_browser"/>
    </LinearLayout>
</ScrollView>
